test/files/invalid/docstrings_native_include.fbs
//! Okay
/// Bad1
//! Bad2
/// Bad3
native_include /// Bad4
/// Bad5
"foo" /// Bad6
/// Bad7
; /// Bad8
/// Bad9
//! Bad10
